Rezolvare Warnings part1